RESOLVED FIXED94060
[Chromium] fast/dom/Window/dom-access-from-closure-window.html is flaky on Linux
https://bugs.webkit.org/show_bug.cgi?id=94060
Summary [Chromium] fast/dom/Window/dom-access-from-closure-window.html is flaky on Linux
Yuta Kitamura
Reported 2012-08-14 19:29:57 PDT
The following test is flaky on Chromium-Linux bots: fast/dom/Window/dom-access-from-closure-window.html Looks like http://trac.webkit.org/changeset/125592 fixed the issue which caused this test to fail consistently, but it introduced a new flakiness (or revealed the hidden flakiness). http://test-results.appspot.com/dashboards/flakiness_dashboard.html#tests=fast%2Fdom%2FWindow%2Fdom-access-from-closure-window.html It seems Mac and Windows are okay at this moment. Diffs look like the following: --- /b/build/slave/Webkit_Linux__dbg_/build/layout-test-results/fast/dom/Window/dom-access-from-closure-window-expected.txt +++ /b/build/slave/Webkit_Linux__dbg_/build/layout-test-results/fast/dom/Window/dom-access-from-closure-window-actual.txt @@ -1,5 +1,4 @@ -document.URL: LayoutTests/fast/dom/Window/resources/dom-access-from-closure-window-child.html -window.document.URL: LayoutTests/fast/dom/Window/resources/notify-opener-done.html -name: child -window.name: child +CONSOLE MESSAGE: Unsafe JavaScript attempt to access frame with URL notify-opener-done.html. Domains, protocols and ports must match. +An exception was thrown: Cannot read property 'URL' of undefined +
Attachments
Need to check JSC (3.59 KB, patch)
2012-08-14 23:45 PDT, Adam Barth
no flags
Patch (5.88 KB, patch)
2012-08-15 00:17 PDT, Adam Barth
no flags
Adam Barth
Comment 1 2012-08-14 20:22:57 PDT
Thanks. This does sound related to my patch.
Adam Barth
Comment 2 2012-08-14 22:11:24 PDT
The flakiness seems to be gc-dependent. If you call gc() as the first statement in done(), you can repro 100% of the time.
Adam Barth
Comment 3 2012-08-14 23:45:26 PDT
Created attachment 158509 [details] Need to check JSC
Adam Barth
Comment 4 2012-08-15 00:17:40 PDT
Kentaro Hara
Comment 5 2012-08-15 00:24:53 PDT
Comment on attachment 158515 [details] Patch Looks reasonable.
WebKit Review Bot
Comment 6 2012-08-15 01:26:22 PDT
Comment on attachment 158515 [details] Patch Clearing flags on attachment: 158515 Committed r125656: <http://trac.webkit.org/changeset/125656>
WebKit Review Bot
Comment 7 2012-08-15 01:26:26 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.